--- a/css/main.css
+++ b/css/main.css
@@ -125,4 +125,15 @@ h2.form-title.coleta{
 .bold{
   font-weight: bold;
 }
-#map { height: 300px; width: 100%; }
+#map {
+  height: 300px;
+  width: 100%;
+}
+.materiais{
+  margin-top: -50px;
+}
+.lista-material{
+  position: relative;
+  top: -25px;
+  margin-bottom: 50px;
+}
